<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        <TableRow
            android:gravity="center_vertical" >
            <TextView
                style="@style/FontLabel"
                android:text="@string/search_for" />
            <maigosoft.mcpdict.CustomSearchView
                android:id="@+id/search_view" />
        </TableRow>
        <TableRow
            android:gravity="center_vertical" >
            <TextView
                style="@style/FontLabel"
                android:text="@string/search_as" />
            <Spinner
                android:id="@+id/spinner_search_as" />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:paddingTop="6dp" >
            <TextView
                style="@style/FontLabel"
                android:text="@string/search_options" />
            <CheckBox
                style="@style/CheckBoxOption"
                android:id="@+id/check_box_kuangx_yonh_only"
                android:text="@string/option_kuangx_yonh_only" />
        </TableRow>
        <TableRow
            android:gravity="center_vertical" >
            <CheckBox
                style="@style/CheckBoxOption"
                android:id="@+id/check_box_allow_variants"
                android:layout_column="1"
                android:text="@string/option_allow_variants" />
        </TableRow>
        <TableRow
            android:gravity="center_vertical"
            android:paddingBottom="8dp" >
            <CheckBox
                style="@style/CheckBoxOption"
                android:id="@+id/check_box_tone_insensitive"
                android:layout_column="1"
                android:text="@string/option_tone_insensitive" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <fragment
        android:name="maigosoft.mcpdict.SearchResultFragment"
        android:id="@+id/fragment_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
